# athenaeum

./: .dockerignore  .gitignore  .pre-commit-config.yaml  API.md  CHANGELOG.md  CONTRIBUTING.md  DEPLOYMENT.md  LAMBDA_PERFORMANCE.md  LICENSE  MCP_PROTOCOL.md  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
examples/: README.md  cdk.json  deploy.sh  requirements.txt
examples/cdk/: app.py
examples/cdk/stacks/: __init__.py  athenaeum_stack.py
examples/deployment/: .dockerignore  Dockerfile  README.md  lambda_handler.py  oauth_authorizer.py  requirements.txt  run.sh
examples/simple-deployment/: README.md  app.py
examples/simple-deployment/stacks/: simple_stack.py
src/athenaeum/: api_server.py  indexer.py  main_cli.py  mcp_protocol.py  mcp_server.py  retriever.py  utils.py
src/athenaeum/infra/: __init__.py  api_server.py  api_server_container.py  dependencies_layer.py  mcp_server.py  mcp_server_container.py
src/athenaeum/prompts/: chat_system_prompt.txt
tests/: test_api_server.py  test_cli.py  test_indexer.py  test_mcp_server.py  test_retriever.py  test_utils.py
