[project]
name = "athenaeum"
version = "0.1.0"
description = "A markdown-focused RAG system with vector search and FastAPI server"
authors = [{ name = "Matt Hanson", email = "matt.a.hanson@gmail.com" }]
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.12"
keywords = [
    "rag",
    "llm",
    "retrieval-augmented-generation",
    "vector-search",
    "markdown",
    "faiss",
    "llamaindex",
    "fastapi",
    "aws-lambda",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
    "Framework :: FastAPI",
]
dependencies = [
  "typer>=0.12", # CLI
  "llama-index-core>=0.10.0", # Base LlamaIndex framework with MarkdownNodeParser
  "llama-index-embeddings-huggingface>=0.2.0", # HuggingFace embeddings (sentence-transformers)
  "llama-index-vector-stores-faiss>=0.1.0", # FAISS integration
  "faiss-cpu>=1.7.4", # FAISS backend (CPU)
  "fastapi>=0.108.0", # API framework
  "uvicorn>=0.27.0", # ASGI server for FastAPI
  "pydantic>=2.5.0", # Data validation
  "torch>=2.0.0", # PyTorch (required by sentence-transformers)
  "transformers>=4.36", # Transformers (required by sentence-transformers)
  "openai>=1.0.0", # OpenAI API for chat/tool calling
]

[project.urls]
Homepage = "https://github.com/matthewhanson/athenaeum"
Repository = "https://github.com/matthewhanson/athenaeum"
Documentation = "https://github.com/matthewhanson/athenaeum#readme"
"Bug Tracker" = "https://github.com/matthewhanson/athenaeum/issues"
Changelog = "https://github.com/matthewhanson/athenaeum/blob/main/CHANGELOG.md"

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "pytest-cov>=5.0",
  "httpx>=0.27.0",  # For testing FastAPI
  "pytest-asyncio>=0.23.0",  # For async tests
  "ruff>=0.6",
  "mypy>=1.11",
  "bandit>=1.7",
  "pre-commit>=3.5",
]
deploy = [
  "aws-cdk-lib>=2.100.0",
  "constructs>=10.0.0",
  "python-jose[cryptography]>=3.3.0",  # JWT/OAuth handling
  "python-multipart>=0.0.6",  # OAuth form data
  "boto3>=1.34.0",  # AWS SDK for S3 index download
]
llm-openai = [
  "llama-index-llms-openai>=0.6.4",  # OpenAI LLM provider
]
llm-bedrock = [
  "llama-index-llms-bedrock>=0.1.0",  # AWS Bedrock LLM provider
  "boto3>=1.34.0",  # AWS SDK
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
# optional: to pin uv versioning behavior
index-url = "https://pypi.org/simple"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.sdist]
include = ["src", "README.md", "LICENSE"]

[tool.hatch.build.targets.wheel]
packages = ["src/athenaeum"]

[project.scripts]
athenaeum = "athenaeum.main_cli:main"

[tool.pytest.ini_options]
addopts = "-v"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = [
  "E",   # pycodestyle errors
  "W",   # pycodestyle warnings
  "F",   # pyflakes
  "I",   # isort
  "B",   # flake8-bugbear
  "C4",  # flake8-comprehensions
  "UP",  # pyupgrade
  "ARG", # flake8-unused-arguments
  "SIM", # flake8-simplify
]
ignore = [
  "E501", # line too long - handled by formatter
  "B008", # do not perform function calls in argument defaults
]

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false  # Set to true when adding type hints
ignore_missing_imports = true

[tool.bandit]
exclude_dirs = ["tests", ".venv"]
# B101: assert_used (not a security issue in tests)
# B104: hardcoded_bind_all_interfaces (intentional for dev server in CLI)
# B404: import_subprocess (required for CLI serve command)
# B603: subprocess_without_shell_equals_true (safe usage in CLI)
skips = ["B101", "B104", "B404", "B603"]
